cabal-version:       3.0
name:                plutus-repl-issue
version:             0.1.0.0
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     
    PlutusReplIssue
  build-depends:      
    base >=4.13 && <4.14,
    plutus-tx,
    plutus-tx-plugin,
    language-plutus-core,
  default-language:    Haskell2010
